--- a/main.html
+++ b/main.html
@@ -8,7 +8,43 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- add table here -->
+     <table>
+        <caption>Game Stats</caption>
+        <thead>
+            <tr>
+                <th>Player</th>
+                <th>Score</th>
+                <th>Level</th>
+                <th>Time Played (hrs)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John Doe</td>
+                <td>1500</td>
+                <td>5</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td>Jane Smith</td>
+                <td>2000</td>
+                <td>7</td>
+                <td>15</td>
+            </tr>
+            <tr>
+                <td>Emma Brown</td>
+                <td>1750</td>
+                <td>6</td>
+                <td>12</td>
+            </tr>
+            <tr>
+                <td>Mike Johnson</td>
+                <td>2200</td>
+                <td>8</td>
+                <td>20</td>
+            </tr>
+        </tbody>
+    </table>
 
         
 </body>
